# mosaix

./: .gitignore  CMakeLists.txt  README.md  ROADMAP.md
src/: Image.cpp  Image.h  Mosaic.cpp  Mosaic.h  Pixel.cpp  Pixel.h  mosaix.cpp
tools/: build.sh  clean.sh  run.sh
